common update
