# src/features/common/common.controller.ts
@@ -3,31 +3,50 @@ import commonService from "./common.service";
 
 class CommonController {
     async dropdown(req: Request, res: Response) {
+        //  #swagger.tags = ['Common']
         try {
             const { type } = req.query;
+            const { name = '' } = req.query;
+            const { limit } = req.query;
 
-            switch (type) {
-                case "brand":
+            let take: any | null = !isNaN(Number(limit)) ? Number(limit) : undefined;
+
+
+            // switch (type) {
+            //     case TypeName.BRAND:
+
+            //         break;
+            //     case TypeName.CATEGORY:
+
+            //         break;
+
+            //     default:
+            //         break;
+            // }
+
+            switch ((type as string).toLocaleLowerCase()) {
+                case TypeName.BRAND:
                     return res.success({
-                        data: await commonService.getBrands(),
+                        data: await commonService.getBrands(name as string, take),
                         message: "Brands fetched successfully",
                     });
 
-                case "category":
+                case TypeName.CATEGORY:
                     return res.success({
-                        data: await commonService.getCategories(),
+                        data: await commonService.getCategories(name as string, take),
                         message: "Categories fetched successfully",
                     });
 
                 case "availability":
+                    const data = await commonService.getAvailabilityByValue(name as string)
                     return res.success({
-                        data: await commonService.getAvailabilities(),
+                        data: data?.map((e) => ({ name: e })),
                         message: "Availabilities fetched successfully",
                     });
-                case "specificationType":
+                case "specificationtype":
                     return res.success({
-                        data: await commonService.getSpecificationTypes(),
-                        message: "Availabilities fetched successfully",
+                        data: await commonService.getSpecificationTypes(name as string, take),
+                        message: "specificationType fetched successfully",
                     });
 
                 default:
@@ -44,6 +63,14 @@ class CommonController {
             });
         }
     }
+
+
+}
+
+
+enum TypeName {
+    BRAND = 'brand',
+    CATEGORY = 'category'
 }
 
 export default new CommonController();
